--- a/bsconfig.json
+++ b/bsconfig.json
@@ -11,6 +11,7 @@
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
+    "bs-express"
       // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
   ],
   "namespace": true,
