--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "MIT",
   "devDependencies": {
     "bs-platform": "^2.1.0"
+  },
+  "dependencies": {
+    "bs-express": "^0.0.6"
   }
 }
