--- a/bsconfig.json
+++ b/bsconfig.json
@@ -4,7 +4,8 @@
   "name": "server",
   "version": "0.1.0",
   "sources": [
-    "src"
+    "src",
+    "snippets"
   ],
   "package-specs": {
     "module": "commonjs"
@@ -12,7 +13,6 @@
   "suffix": ".bs.js",
   "bs-dependencies": [
     "bs-express"
-      // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
   ],
   "namespace": true,
   "refmt": 3
