added algolia to the system to allow for searching of snippets

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -14,6 +14,7 @@
   "bs-dependencies": [
     "bs-express",
     "bs-graphql",
+    "bs-graphql-tools",
     "bs-apollo-server-express"
   ],
   "namespace": true,
