removed algolia from local setup and moved it to a seperate npm-module

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -12,6 +12,7 @@
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
+    "bs-algolia",
     "bs-express",
     "bs-graphql",
     "bs-graphql-tools",
