--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bs-express": "^0.0.6",
     "bs-graphql": "^0.3.1",
     "bs-graphql-tools": "^0.3.1",
+    "bs-nice": "^0.1.5",
     "express": "^4.16.2",
     "graphql": "^0.12.3",
     "graphql-tools": "^2.19.0",
