--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   "license": "MIT",
   "devDependencies": {
     "bs-platform": "^2.1.0",
+    "graphql_ppx": "^0.0.1",
     "nodemon": "^1.14.11"
   },
   "dependencies": {
     "algoliasearch": "^3.24.9",
+    "apollo-cache-inmemory": "^1.1.7",
+    "apollo-client": "^2.2.2",
+    "apollo-link-context": "^1.0.3",
+    "apollo-link-error": "^1.0.3",
+    "apollo-link-http": "^1.3.2",
     "body-parser": "^1.18.2",
     "bs-algolia": "^0.0.1",
     "bs-apollo-server-express": "^0.3.1",
@@ -26,9 +32,13 @@
     "bs-graphql": "^0.3.1",
     "bs-graphql-tools": "^0.3.1",
     "bs-nice": "^0.1.5",
+    "detect-node": "^2.0.3",
     "express": "^4.16.2",
     "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
     "graphql-tools": "^2.19.0",
+    "node-fetch": "^1.7.3",
+    "reason-apollo": "^0.6.12",
     "reason-react": "^0.3.1",
     "webpack": "^3.10.0",
     "webpack-node-externals": "^1.6.0"
