moved bs-components into a npm module and a added it to my project

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -22,7 +22,8 @@
     "bs-apollo-server-express",
     "reason-react",
     "reason-apollo",
-    "bs-nice"
+    "bs-nice",
+    "bs-nice-components"
   ],
   "reason": {
     "react-jsx": 2
