--- a/bsconfig.json
+++ b/bsconfig.json
@@ -6,6 +6,10 @@
       "dir": "src",
       "subdirs": true
     },
+    {
+      "dir": "__tests__",
+      "type": "dev"
+    },
     "snippets"
   ],
   "package-specs": {
@@ -22,6 +26,9 @@
     "reason-apollo",
     "bs-nice",
     "bs-nice-components"
+  ],
+  "bs-dev-dependencies": [
+    "@glennsl/bs-jest"
   ],
   "reason": {
     "react-jsx": 2
