--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "lodash.debounce": "^4.0.8",
     "reason-apollo": "^0.6.12",
     "reason-react": "^0.3.1"
+  },
+  "jest": {
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.bs.js?$"
   }
 }
