--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start-reason": "bsb -make-world -w",
     "clean": "bsb -clean-world",
     "test": "jest --watch",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "publish":
+      "now -e ALGOLIA_API_KEY=@algolia-api-key -e ALGOLIA_APPLICATION_ID=@algolia-application-id --docker"
   },
   "lint-staged": {
     "*.{re,rei}": ["refmt --in-place", "git add"],
@@ -24,7 +26,7 @@
     "bs-platform": "^2.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "graphql_ppx": "^0.0.1",
+    "graphql_ppx": "^0.2.1",
     "husky": "^0.14.3",
     "jest": "^22.3.0",
     "lint-staged": "^7.0.0",
